<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.apps.saad.animodule.registerActivity">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:padding="10dp"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/registerButton"
        android:layout_alignStart="@+id/registerButton"
        android:layout_below="@+id/registerButton"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/firstname"
        android:layout_alignRight="@+id/registerButton"
        android:layout_alignEnd="@+id/registerButton"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastname"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"/>

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/emailAddress"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_alignRight="@+id/editText4"
        android:layout_alignEnd="@+id/editText4"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText9"
        android:layout_alignLeft="@+id/editText9"
        android:layout_alignStart="@+id/editText9"
        android:layout_alignRight="@+id/editText9"
        android:layout_alignEnd="@+id/editText9"/>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5"/>

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordconfirm"
        android:layout_below="@+id/editText6"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:layout_alignRight="@+id/editText6"
        android:layout_alignEnd="@+id/editText6"/>
</RelativeLayout>