<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context="com.apps.saad.animodule.loginActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape"
        android:padding="10dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:autoLink="email"
        android:linksClickable="true"
        android:text="@string/forgotpass"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/terms"
        android:textColorLink="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:layout_marginBottom="5dp"
        app:srcCompat="@drawable/login_pic"
        android:layout_gravity="center"/>

</LinearLayout>