<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.apps.saad.animodule.HeadDesignActivity">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <Button
               android:id="@+id/main"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/main" />

           <Button
               android:id="@+id/savebt"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/save" />

           <Button
               android:id="@+id/next"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/ear" />
       </LinearLayout>

           <RelativeLayout
               android:id="@+id/designedHead"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:background="@android:color/white">

               <com.github.chrisbanes.photoview.PhotoView
                   android:id="@+id/blank1"
                   android:layout_width="138dp"
                   android:layout_height="285dp"
                   android:background="@android:color/transparent"
                   android:foregroundGravity="center"
                   android:src="@drawable/blank"
                   android:visibility="visible" />

               <ImageView
                   android:layout_width="138dp"
                   android:layout_height="285dp"
                   android:foregroundGravity="center"
                   android:src="@drawable/elephantearcutout" />

           </RelativeLayout>


</LinearLayout>