<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context="com.apps.saad.animodule.SubMainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_weight="0.33" />

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_weight="0.26"
        android:background="@android:color/white"
        android:scaleType="fitXY" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/elephantcolored"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/alligator"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:scaleType="fitCenter" />


            <ImageButton
                android:id="@+id/butterfly"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/cougar"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:scaleType="fitCenter" />

        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/create_animodule"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonshape"
        android:padding="10dp"
        android:text="@string/create_animodule"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/achievement"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/achievements"
        android:padding="15dp"
        android:text="@string/achieve"
        android:textColor="@android:color/white"
        android:textSize="9sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.349"/>

    <Button
        android:id="@+id/lib"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/library"
        android:padding="15dp"
        android:text="@string/library"
        android:textColor="@android:color/white"
        android:textSize="9sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.349"/>

<LinearLayout
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/setting"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/settings"
        android:padding="15dp"
        android:text="@string/setting"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="8sp"
        app:layout_constraintVertical_bias="0.526" />

    <Button
        android:id="@+id/logout"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/logout"
        android:padding="15dp"
        android:textStyle="bold"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        app:layout_constraintVertical_bias="0.526" />

</LinearLayout>



</LinearLayout>
